k8s/manifests-9d8ae9/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9d8ae9
  namespace: journee
  labels:
    app: journee-9d8ae9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-9d8ae9
  template:
    metadata:
      labels:
        app: journee-9d8ae9
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9d8ae9
          image: gcr.io/my-docker-471807/journee:v5.1.0
          ports:
            - containerPort: 3000
