k8s/manifests-9d8ae9/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9d8ae9
  namespace: journee
spec:
  selector:
    app: journee-9d8ae9
  ports:
    - port: 80
      targetPort: 3000
